Fixes bad z-index

--- a/src/routes/Home/Home.styl
+++ b/src/routes/Home/Home.styl
@@ -21,7 +21,7 @@
   top: 0
   position: absolute
   margin: auto
-  z-index: 1
+  z-index: 0
 
 .home .poem .content
   position: absolute
@@ -38,7 +38,7 @@
   width: 15%
   height: 100%
   opacity: 0.1
-  z-index: 10
+  z-index: 1
 
 .left-half
   left: 0
